# mintern-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
Source/engine/: CMakeLists.txt
Source/engine/include/: maths.h
Source/engine/src/graphics/: shader.cpp  shader.h  window.cpp  window.h
Source/engine/src/graphics/buffers/: buffer.cpp  buffer.h  indexBuffer.cpp  indexBuffer.h  vertexArray.cpp  vertexArray.h
Source/engine/src/graphics/layers/: layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
Source/engine/src/graphics/render/: batch2DRenderer.cpp  batch2DRenderer.h  renderable2d.h  renderer2d.h  simple2drenderer.cpp  simple2drenderer.h  sprite.cpp  sprite.h  staticSprite.cpp  staticSprite.h
Source/engine/src/input/: input.cpp  input.h
Source/engine/src/math/: math_func.h  maths.h  matrix4.cpp  matrix4.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
Source/engine/src/shaders/: basic.frag  basic.vert
Source/engine/src/utils/: fileutils.h  timer.h
Source/game/: CMakeLists.txt
Source/game/include/: game.h
Source/game/src/: game.cpp  game.h
